--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,13 @@ endorsed.classpath=
 excludes=
 file.reference.jcommon-1.0.24.jar=/Users/pranamimishra/Downloads/jcommon-1.0.24.jar
 file.reference.jfreechart-1.0.19-demo.jar=/Users/pranamimishra/Downloads/jfreechart-1.0.19-demo.jar
-file.reference.mysql-connector-j-9.3.0.jar=/Users/pranamimishra/Downloads/mysql-connector-j-9.3.0.jar
+file.reference.mysql-connector-java-8.0.33.jar=lib/mysql-connector-java-8.0.33.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jfreechart-1.0.19-demo.jar}:\
     ${file.reference.jcommon-1.0.24.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.mysql-connector-java-8.0.33.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
